Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.4.12
-
None
-
TestTarball_2 rhel-6
Description
galera_sr.GCF-1018B failed on CI.
stdio.log:
|
10.4.12-6 bfd709bf378e98e4c8a8f03e1445e43444ade0d2, rhel-6 |
2020-01-31T06:01:06.7157294Z galera_sr.GCF-1018B 'innodb' w2 [ fail ] Found warnings/errors in server log file!
|
2020-01-31T06:01:06.7159327Z Test ended at 2020-01-31 01:01:06
|
2020-01-31T06:01:06.7159935Z line
|
2020-01-31T06:01:06.7160703Z 2020-01-31 1:01:06 15 [ERROR] WSREP: Failed to open table mysql.wsrep_streaming_log for writing
|
2020-01-31T06:01:06.7161152Z ^ Found warnings in /var/tmp/mtr/2/log/mysqld.2.err
|
Attachments
Issue Links
- relates to
-
MDEV-18534 galera_sr.GCF-1018B: Test failure: mysqltest: mysqltest: Can't connect to local MySQL server; signal 6
-
- Closed
-